microservices-demo/network-policy-manifests/calico/allow-currency-service-egress-to-internet.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: currency-service-allow-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: currencyservice
  policyTypes:
    - Egress
  egress:
    - to: []
