microservices-demo/network-policy-manifests/calico/allow-pinned-backend-to-database.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-currencyservice-rediscart
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: redis-cart
#      tier: database
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cartservice
#              tier: backend
